--- a/mysite/flato/templates/news.html
+++ b/mysite/flato/templates/news.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-{% for new in news %}
-{{new.title}}
-{% endfor %}
-
-</body>
-</html>
+{% block content %}
+<div class="container">
+    <div class="card">
+        <div class="card-image">
+              <img src="{{news.image}}">
+              <span class="card-title">{{news.title}}</span>
+        </div>
+        <div class="card-content">
+              <p>
+                  {{news.description}}
+              </p>
+        </div>
+        <div class="card-action">
+              <a href="{{news.link}}">{{news.source}}</a>
+            </div>
+    </div>
+</div>
+{% endblock %}
