--- a/mysite/flato/templates/news.html
+++ b/mysite/flato/templates/news.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+{%if news %}
 <div class="container">
     <div class="card">
         <div class="card-image">
@@ -17,7 +19,14 @@
         </div>
 
     </div>
-
 </div>
+
+{% endif %}
+
+
+{%if movie %}
+{{ movie }}
+
+{% endif %}
 
 {% endblock %}
