--- a/mysite/flato/templates/feed.html
+++ b/mysite/flato/templates/feed.html
@@ -3,14 +3,24 @@
 {% block content %}
 
 
-
 <div class="container">
     <div class="card">
-        <div class="container center">
-        <h1>General news</h1>
+        <div class="container">
+            <br> <br>
+           <p class="caption">Choose what to display</p>
+
+            <div class="chips chips-initial">
+                <div class="chip">General<i class="material-icons close">close</i></div>
+                <div class="chip">Technology<i class="material-icons close">close</i></div>
+                <div class="chip">Science and nature<i class="material-icons close">close</i></div>
+                <div class="chip">Business<i class="material-icons close">close</i></div>
+                <input id="6a2758cb-13c9-9ed8-44c7-60ced1122181" class="input" placeholder=""></div>
+
+    <br> <br>
         </div>
-    </div>
+  </div>
 </div>
+
 
 <div class="container">
     <div class="row">
@@ -23,9 +33,19 @@
                     <img class="activator" src="{{object.image}}">
                 </div>
                 <div class="card-content">
+
                     <span class="card-title activator grey-text text-darken-4">{{ object.title }}<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a class="waves-effect waves-light btn" href="news/{{object.slug}}">Go to post</a></p>
+                    <div class="chip right">
+                        {{ object.tag }}
+                    </div>
+                    <div class="chip right">
+                        {{ object.source }}
+                    </div>
+                    <p><a class="waves-effect waves-light btn" href="news/{{object.slug}}">Go to post</a>
+
+
+                    </p>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">{{ object.title}}<i class="material-icons right">close</i></span>
@@ -40,12 +60,11 @@
     </div>
 </div>
 
-
-
+{% if movielist %}
 <div class="container">
     <div class="card">
         <div class="container center">
-        <h1>Movies</h1>
+            <h1>Movies</h1>
         </div>
     </div>
 </div>
@@ -78,6 +97,46 @@
     </div>
 </div>
 
+<script>
+console.log("feed2");
+$( document ).ready(function() {
+console.log("feed");
 
+});
+$('.chips').material_chip();
+  $('.chips-initial').material_chip({
+    data: [{
+      tag: 'General',
+    }, {
+      tag: 'Technology',
+    }, {
+      tag: 'Google',
+    }],
+  });
+  $('.chips-placeholder').material_chip({
+    placeholder: 'Enter a tag',
+    secondaryPlaceholder: '+Tag',
+  });
+  $('.chips-autocomplete').material_chip({
+    autocompleteOptions: {
+      data: {
+        'General': null,
+        'Technology': null,
+        'Google': null
+      },
+      limit: Infinity,
+      minLength: 1
+    }
+  });
+
+  $('.chips-initial').material_chip('data');
+
+   $('.chips').on('chip.delete', function(e, chip){
+    console.log("test");
+  });
+
+</script>
+
+{% endif %}
 
 {% endblock %}
