--- a/mysite/flato/templates/feed.html
+++ b/mysite/flato/templates/feed.html
@@ -2,21 +2,31 @@
 
 {% block content %}
 
+<style>
+  blockquote{
+  margin: 20px 0;
+  padding-left: 1.5rem;
+  border-left: 5px solid #607D8B; /* Just change the color value and that's it*/
+}
 
+</style>
 <div class="container">
     <div class="card">
         <div class="container">
             <br> <br>
 
-            <p class="caption">Choose topics to display </p>
-            <div class="chips  chips-autocomplete chips-initial">
-            </div>
-            <blockquote>
-                Topics to choose from are <br>
-                General, Business, Politics, Sport, Gaming, Technology
-            </blockquote>
+
             <br>
             <form action="search/" method="post">{% csrf_token %}
+                <p class="caption">Choose topics to display </p>
+                <div name="chips" class="chips  chips-autocomplete chips-initial">
+                </div>
+                <blockquote>
+                    Topics to choose from are <br>
+                    General, Business, Politics, Sport, Gaming, Technology
+                </blockquote>
+
+
                 Number of news items to display
                 <p class="range-field">
                     <input type="range" id="newsnumber" name="newsnumber" min="1" max="100"/>
@@ -40,18 +50,23 @@
                         <input type="text" name="time" placeholder="Limit time" class="timepicker">
                     </div>
                 </div>
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                    <i class="material-icons right">keyboard_arrow_right</i>
-                </button>
+                <p>
+                    Clearing will clear the title, author, description and time input<br>
+                </p>
+                <div class="row">
+                    <button class="btn waves-effect waves-light col s3" type="submit" name="action">Search
+                        <i class="material-icons right">search</i>
+                    </button>
             </form>
             <form action="clear/" method="post">{% csrf_token %}
-                <button class="btn waves-effect waves-light" type="submit" name="action">Clear
-                    <i class="material-icons right">keyboard_arrow_right</i>
+                <button class="btn waves-effect waves-light right col s3" type="submit" name="action">Clear
+                    <i class="material-icons right">clear</i>
                 </button>
             </form>
-            <br>
         </div>
+        <br>
     </div>
+</div>
 </div>
 
 <div class="container">
