--- a/mysite/flato/templates/registration/login.html
+++ b/mysite/flato/templates/registration/login.html
@@ -18,7 +18,7 @@
 
             <h2>Login</h2>
             <h3>
-                Welcome back, we where missing you. <i class="em em-astonished"></i>
+                Welcome back, we were missing you. <i class="em em-astonished"></i>
             </h3>
             <form method="post">
                 {% csrf_token %}
@@ -33,5 +33,3 @@
 
 
 {% endblock %}
-
-
