niel offline version

--- a/mysite/flato/templates/index.html
+++ b/mysite/flato/templates/index.html
@@ -12,29 +12,17 @@
         </div>
         <div class="row center">
             <a href="/feed"
-               class="btn-large waves-effect waves-light">Take me there</a>
+               class="btn-large waves-effect waves-light">To The Feed</a>
+        </div>
+        <div class="row center">
+            <a href="/blog"
+               class="btn-large waves-effect waves-light">About Us</a>
         </div>
         <br>
     </div>
 </div>
 
-  <div class="slider">
-    <ul class="slides">
-        {% for image in images %}
 
-
-      <li>
-        <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
-        <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-        </div>
-      </li>
-
-
-        {% endfor %}
-    </ul>
-  </div>
 
 
 
