--- a/mysite/flato/templates/index.html
+++ b/mysite/flato/templates/index.html
@@ -3,8 +3,7 @@
 {% load static %}
 
 {% block content %}
-
-<div class="section no-pad-bot" id="index-banner">
+<body background="assets/images/1.jpg">
     <div class="container">
         <h1 class="header center">Flato</h1>
         <div class="row center">
@@ -15,12 +14,13 @@
                class="btn-large waves-effect waves-light">To The Feed</a>
         </div>
         <div class="row center">
-            <a href="/blog"
+            <a href="/post_list"
                class="btn-large waves-effect waves-light">About Us</a>
         </div>
         <br>
     </div>
 </div>
+</body>
 
 
 
