--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -1,16 +1,31 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-    <div class="post">
-        {% if post.published_date %}
+
+<div class="container">
+    <div class="card">
+
+        <span class="card-title">{{post.title}}</span>
+
+        <div class="card-content">
+            <p>
+                {{ post.text|linebreaksbr }}
+            </p>
+            <hr>
+            {% if post.published_date %}
             <div class="date">
-                {{ post.published_date }}
+                Posted on {{ post.published_date }} <br>
             </div>
-        {% endif %}
+            {% endif %}
+        </div>
         {% if user.is_authenticated %}
-             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <div class="card-action"><a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Edit Post<span
+                class="glyphicon glyphicon-pencil"></span></a>
+        </div>
         {% endif %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+
     </div>
+</div>
+
+
 {% endblock %}
