--- a/mysite/flato/templates/base.html
+++ b/mysite/flato/templates/base.html
@@ -39,7 +39,7 @@
 <body>
   <nav>
     <div class="nav-wrapper dark-primary-color">
-      <a href="#!" class="brand-logo center"><img height="50em" src="{% static 'images/icon/icon.ico' %}"/></a>
+      <a href="/" class="brand-logo center"><img height="50em" src="{% static 'images/icon/icon.ico' %}"/></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <div class="userinfo">
         <div class="right-align">
